--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -1,6 +1,9 @@
 - content_for :page_title do
   Bookmarks
 
+- content_for :page_actions do
+  = link_to "Add Bookmark", new_bookmark_path, class: "ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-limegreen-600 hover:bg-limegreen-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500"
+
 - if @bookmarks.any?
   = paginate @bookmarks
 
