--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -2,11 +2,9 @@
   = @bookmark.title
 
 - content_for :page_actions do
-  %button( type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" )
-    Edit
+  = link_to "Delete", bookmark_path(@bookmark), method: :delete, class: "text-sm font-medium text-gray-400 hover:text-gray-900", data: { confirm: "Are you sure?" }
 
-  %button( type="button" class="ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" )
-    Delete
+  = link_to "Edit", edit_bookmark_path(@bookmark), class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500"
 
 .flex.flex-col.justify-between.lg:flex-row
   .w-full.flex.flex-col.lg:mr-2.sm:mb-2
