--- a/app/views/layouts/page.html.haml
+++ b/app/views/layouts/page.html.haml
@@ -18,7 +18,7 @@
                   .flex-shrink-0
                     = image_tag "bug_logo.png", class: "h-8 w-8", alt: "transient bug"
                     
-                  -#.hidden.md:block
+                  .hidden.md:block
                     .ml-10.flex.items-baseline.space-x-4
                       / Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white"
                       %a.bg-gray-900.text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Dashboard
@@ -27,7 +27,7 @@
                       %a.text-gray-300.hover:bg-gray-700.hover:text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Calendar
                       %a.text-gray-300.hover:bg-gray-700.hover:text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Reports
 
-                -#.hidden.md:block
+                .hidden.md:block
                   .ml-4.flex.items-center.md:ml-6
                     %button.bg-gray-800.p-1.text-gray-400.rounded-full.hover:text-white.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white
                       %span.sr-only View notifications
@@ -75,7 +75,7 @@
             Mobile menu, toggle classes based on menu state.
             
             Open: "block", closed: "hidden"
-          -#.hidden.border-b.border-gray-700.md:hidden
+          .hidden.border-b.border-gray-700.md:hidden
             .px-2.py-3.space-y-1.sm:px-3
               / Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white"
               %a.bg-gray-900.text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Dashboard
@@ -84,7 +84,7 @@
               %a.text-gray-300.hover:bg-gray-700.hover:text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Calendar
               %a.text-gray-300.hover:bg-gray-700.hover:text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Reports
 
-            -#.pt-4.pb-3.border-t.border-gray-700
+            .pt-4.pb-3.border-t.border-gray-700
               .flex.items-center.px-5
                 .flex-shrink-0
                   %img.h-10.w-10.rounded-full{:alt => "", :src => "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"}/
@@ -113,7 +113,7 @@
 
       %main.-mt-32
         .max-w-7xl.mx-auto.pb-12.px-4.sm:px-6.lg:px-8
-          .bg-white.rounded-lg.shadow.px-5.py-6.sm:px-6.min-h-screen
+          .bg-white.rounded-lg.shadow.px-5.py-6.sm:px-6.min-h-screen.space-y-3
             = yield
 
     = render "layouts/common/footer"
