--- a/app/components/bookmark_card_component/bookmark_card_component.html.haml
+++ b/app/components/bookmark_card_component/bookmark_card_component.html.haml
@@ -1,9 +1,9 @@
-%div.px-4.py-4.sm:px-6
-  .flex.items-center.justify-between
+.bg-white.shadow.overflow-hidden.md:rounded-md.px-4.py-4.sm:px-6
+  .sm:flex.items-center.justify-between
     %p.text-sm.font-medium.text-royalblue-600.truncate
       = link_to @bookmark.title, bookmark_path(@bookmark)
 
-    .ml-2.flex-shrink-0.flex.space-x-1
+    .flex-shrink-0.flex.space-x-1
       = render TagComponent.with_collection(@bookmark.tags)
 
   .mt-2.sm:flex.sm:justify-between
