--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -2,15 +2,13 @@
   Bookmarks
 
 - content_for :page_actions do
-  = link_to "Add Bookmark", new_bookmark_path, class: "ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-limegreen-600 hover:bg-limegreen-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500"
+  = link_to "Add Bookmark", new_bookmark_path, class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-limegreen-600 hover:bg-limegreen-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500"
 
 - if @bookmarks.any?
   = paginate @bookmarks
 
-  .bg-white.shadow.overflow-hidden.rounded-md
-    %ul.divide-y.divide-gray-200
-      - @bookmarks.each do |bookmark|
-        %li= render BookmarkCardComponent.new(bookmark: bookmark)
+  .space-y-3
+    = render BookmarkCardComponent.with_collection(@bookmarks)
 
   = paginate @bookmarks
 
